Radio con canciones similares

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
-spring.application.name=syncup-api
+# Configuración de la Base de Datos H2
+# Le decimos a Spring que use la URL de H2 que definimos abajo
+spring.datasource.url=jdbc:h2:file:./data/syncupdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Configuración de JPA (Hibernate)
+# Esto le dice a Hibernate que hable "dialecto" H2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# (Opcional) Esto nos permite ver la consola de H2 en el navegador
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+# Le dice a Hibernate que cree o actualice las tablas automáticamente
+spring.jpa.hibernate.ddl-auto=update
