--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.h2.console.path=/h2-console
 
 spring.security.oauth2.client.registration.google.scope=email, profile
 spring.config.import=optional:application-secret.properties
+syncup.genres.master-list=Pop,Rock,Urbano,Salsa,Vallenato,Electronica,Clasica,Jazz,Folk,Hip Hop,Reggae,Metal,Indie,Blues,Country,Disco,Funk,Rap,Trap, Reggaeton
